--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-
-# Created by https://www.toptal.com/developers/gitignore/api/python
-# Edit at https://www.toptal.com/developers/gitignore?templates=python
-
 ### Python ###
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -10,6 +6,9 @@ __pycache__/
 
 # C extensions
 *.so
+
+# EMACS autosave
+*~
 
 # Distribution / packaging
 .Python
@@ -141,5 +140,3 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
-
-# End of https://www.toptal.com/developers/gitignore/api/python
